[OpenNeuro] Recorded changes

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Contains metadata files in the BIDS standard about the participants and the stud
 
 ### Note from the paper
 
-"The offline data processing used the continuous ECoG that was recorded in parallel to the SEP recordings. Data analysis was performed with custom scripts in Matlab  and is very similar to our publication on the intraoperative SEP in the scalp EEG ([Dimakopoulos et al., 2023](https://www.sciencedirect.com/science/article/pii/S1388245723006739?via%3Dihub#b0030)). To detect the SEP stimulation artefact, we first filtered the ECoG (high pass cutoff = 200 Hz) and performed local peak detection (minimum peak prominence between peaks = 30 ms, minimum peak width = 4 ms, samples = 0.2 ms). We used the times of the detected stimulus artifact as triggers to define sweeps with post-stimulus recording sweep length 50 ms. We classified sweeps with amplitude ±100 µV as artefact-ridden and excluded them from further analysis.
+"The offline data processing used the continuous ECoG that was recorded in parallel to the SEP recordings. Data analysis was performed with custom scripts in Matlab. To detect the SEP stimulation artefact, we first filtered the ECoG (high pass cutoff = 200 Hz) and performed local peak detection (minimum peak prominence between peaks = 30 ms, minimum peak width = 4 ms, samples = 0.2 ms). We used the times of the detected stimulus artifact as triggers to define sweeps with post-stimulus recording sweep length 50 ms. We classified sweeps with amplitude ±100 µV as artefact-ridden and excluded them from further analysis.
 
 We averaged 100 sweeps and filtered the averaged trace (bandpass [30 300] Hz, IIR filter, response roll-off -12 db per octave, forward and reverse filtering to avoid phase distortion). We visually inspected the data and selected one optimal channel with high N20 amplitude (positive or negative) for further analysis. From the averaged N20 trace, we determined the N20 peak latency. To obtain the N20 peak amplitude and the SNR, we inspected the latency of the N20 peak. If the N20 latency was >20 ms, we selected a signal window [20 25] ms. If the N20 latency was ≤ 20 ms, we selected a signal window [17 22] ms. In the same way, we filtered the averaged trace in the [250 500] Hz band to obtain the evoked FR and in the [500 1000] Hz band to obtain the evoked HFO. We doubled the largest deflection in the signal window of the N20 frequency band to define the N20 signal amplitude. In the FR and HFO bands we used the peak-to-peak amplitude."
 
@@ -24,4 +24,4 @@ We averaged 100 sweeps and filtered the averaged trace (bandpass [30 300] Hz, II
 bids-starter-kid and custom Matlab scripts were used to convert the dataset into BIDS format.
 
 ### References
-[1] Vasileios Dimakopoulos, Marian C. Neidert, Johannes Sarnthein,Low impedance electrodes improve detection of high frequency oscillations in the intracranial EEG, Clinical Neurophysiology, 2023
+[1] Vasileios Dimakopoulos, Marian C. Neidert, Johannes Sarnthein, Low impedance electrodes improve detection of high frequency oscillations in the intracranial EEG, Clinical Neurophysiology, 2023, ISSN 1388-2457, https://doi.org/10.1016/j.clinph.2023.07.002
