--- a/README
+++ b/README
@@ -25,3 +25,7 @@ bids-starter-kid and custom Matlab scripts were used to convert the dataset into
 
 ### References
 [1] Vasileios Dimakopoulos, Marian C. Neidert, Johannes Sarnthein, Low impedance electrodes improve detection of high frequency oscillations in the intracranial EEG, Clinical Neurophysiology, 2023, ISSN 1388-2457, https://doi.org/10.1016/j.clinph.2023.07.002
+
+If you have any inquiries or questions, contact:
+* Vasileios Dimakopoulos (vasileios.dimakopoulos@usz.ch)
+* Johannes Sarnthein (johannes.sarnthein@usz.ch)
